--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,12 @@ Flask-RESTful==0.3.8
 flask-serialize==1.1.9
 Flask-SQLAlchemy==2.4.3
 Flask-UUID==0.2
-gunicorn==20.0.4
 importlib-metadata==1.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonpickle==1.4.1
+MarkupSafe==1.1.1
+marshmallow==3.6.1
 pycparser==2.20
 PyJWT==1.7.1
 PyMySQL==0.9.3
