--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,112 @@
+aiohttp==3.6.2
+aiohttp-socks==0.5.3
+aiorpcX==0.18.4
 aniso8601==8.0.0
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==20.1.0
 bcrypt==3.1.7
+bitstring==3.1.7
+catfish==1.4.4
 Cerberus==1.3.2
 certifi==2020.6.20
 cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
+command-not-found==0.3
 cryptography==2.9.2
+cupshelpers==1.0
+defer==1.0.6
+distro-info===0.18ubuntu0.18.04.1
+dnspython==1.16.0
 easydict==1.9
+ecdsa==0.16.0
+Electrum==4.0.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
+Flask-Ext==0.1
+flask-jsontools==0.1.7
 Flask-JWT-Extended==3.24.1
 flask-marshmallow==0.13.0
 Flask-RESTful==0.3.8
 flask-serialize==1.1.9
 Flask-SQLAlchemy==2.4.3
 Flask-UUID==0.2
-importlib-metadata==1.6.1
+future==0.18.2
+gpg==1.10.0
+gunicorn==20.0.4
+helpdev==0.7.1
+httplib2==0.9.2
+idna==2.10
+idna-ssl==1.1.0
+importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
-psycopg2-binary==2.8.5
-pycparser==2.20
-PyJWT==1.7.1
-PyMySQL==0.9.3
-python-dotenv==0.14.0
-pytz==2020.1
-six==1.15.0
-SQLAlchemy==1.3.17
-Werkzeug==1.0.1
-wincertstore==0.2
-zipp==3.1.0
-gunicorn==20.0.4
 jsonpickle==1.4.1
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+lightdm-gtk-greeter-settings==1.2.2
 MarkupSafe==1.1.1
 marshmallow==3.6.1
+menulibre==2.2.0
+mugshot==0.4.0
+multidict==4.7.6
+netifaces==0.10.4
+oauth==1.0.1
+olefile==0.45.1
+onboard==1.4.1
+pexpect==4.2.1
+Pillow==5.1.0
+protobuf==3.13.0
+psutil==5.4.2
+psycopg2-binary==2.8.5
+pyaes==1.6.1
+pycairo==1.16.2
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0.1
+pygobject==3.26.1
+PyJWT==1.7.1
+PyMySQL==0.9.3
+PySocks==1.6.5
+python-apt==1.6.5+ubuntu0.2
+python-dateutil==2.6.1
+python-debian==0.1.32
+python-debianbts==2.7.2
+python-dotenv==0.14.0
+python-magic==0.4.16
+pytz==2020.1
+pyxdg==0.25
+PyYAML==3.12
+QDarkStyle==2.8.1
+qrcode==6.1
+QtPy==1.9.0
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+sgt-launcher==0.2.4
+simplejson==3.13.2
+six==1.15.0
+SQLAlchemy==1.3.17
+systemd-python==234
+torbrowser-launcher==0.3.2
+typing-extensions==3.7.4.3
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.22
+wadllib==1.3.2
+Werkzeug==1.0.1
+wincertstore==0.2
+xcffib==0.5.1
+xkit==0.0.0
+yarl==1.5.1
+zipp==3.1.0
+zope.interface==4.3.2
